possibly a working client-side, now for ws

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "nko": "*",
     "connect": "~2.11.0",
     "dispatch": "~0.2.0",
-    "express": "~3.4.4"
+    "express": "~3.4.4",
+    "q": "~0.9.7",
+    "uuid": "~1.4.1",
+    "ws": "~0.4.31"
   },
   "engines": {
     "node": "0.10.x"
