--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "~3.4.4",
     "q": "~0.9.7",
     "uuid": "~1.4.1",
-    "ws": "~0.4.31"
+    "ws": "~0.4.31",
+    "jade": "~0.35.0"
   },
   "engines": {
     "node": "0.10.x"
